--- a/public/home/index.html
+++ b/public/home/index.html
@@ -428,8 +428,27 @@
     <section>
       <h2>Troop Resources</h2>
 
+      <!-- ✅ Troop Resources Search -->
+<div class="searchbar" style="margin: 10px 0 12px;">
+  <input
+    id="resourcesSearch"
+    type="search"
+    placeholder="Search Troop Resources…"
+    autocomplete="off"
+    style="
+      width: min(520px, 100%);
+      padding: 12px 14px;
+      border-radius: 12px;
+      border: 1px solid #000;
+      outline: none;
+      background: rgba(255,255,255,.85);
+      font-size: 14px;
+    "
+  />
+</div>
+
       <div class="grid">
-        <a href="/calendar" class="feature-card-link">
+        <a href="/calendar" class="feature-card-link" data-title="Troop Calendar">
           <div class="feature-card">
             <div class="feature-badge">Schedule</div>
             <h3 class="feature-title">Troop Calendar</h3>
@@ -437,7 +456,7 @@
           </div>
         </a>
 
-        <a href="/documents" class="feature-card-link">
+        <a href="/documents" class="feature-card-link" data-title="Documents">
           <div class="feature-card">
             <div class="feature-badge">Forms</div>
             <h3 class="feature-title">Troop Documents</h3>
@@ -445,7 +464,7 @@
           </div>
         </a>
 
-        <a href="/scoutmaster" class="feature-card-link">
+        <a href="/scoutmaster" class="feature-card-link" data-title="Scoutmaster Blog">
           <div class="feature-card">
             <div class="feature-badge">Leadership</div>
             <h3 class="feature-title">Scoutmaster Blog</h3>
@@ -453,7 +472,7 @@
           </div>
         </a>
 
-        <a href="/spl" class="feature-card-link">
+        <a href="/spl" class="feature-card-link" data-title="SPL Blog">
           <div class="feature-card">
             <div class="feature-badge">Youth Led</div>
             <h3 class="feature-title">SPL Blog</h3>
@@ -461,7 +480,7 @@
           </div>
         </a>
 
-        <a href="/useful-links" class="feature-card-link">
+        <a href="/useful-links" class="feature-card-link" data-title="Useful Links">
           <div class="feature-card">
             <div class="feature-badge">Resources</div>
             <h3 class="feature-title">Useful Links</h3>
@@ -469,7 +488,7 @@
           </div>
         </a>
 
-        <a href="/events" class="feature-card-link">
+        <a href="/events" class="feature-card-link" data-title="Events">
           <div class="feature-card">
             <div class="feature-badge">Campouts/Service</div>
             <h3 class="feature-title">Events</h3>
@@ -477,7 +496,7 @@
           </div>
         </a>
 
-        <a href="/mail" class="feature-card-link">
+        <a href="/mail" class="feature-card-link" data-title="Mail">
           <div class="feature-card">
             <div class="feature-badge">Contact</div>
             <h3 class="feature-title">Mail</h3>
@@ -485,7 +504,7 @@
           </div>
         </a>
 
-        <a href="/roster" class="feature-card-link">
+        <a href="/roster" class="feature-card-link" data-title="Roster">
           <div class="feature-card">
             <div class="feature-badge">Roster</div>
             <h3 class="feature-title">Roster</h3>
@@ -493,7 +512,7 @@
           </div>
         </a>
 
-        <a href="/patrols" class="feature-card-link">
+        <a href="/patrols" class="feature-card-link" data-title="Patrols">
           <div class="feature-card">
             <div class="feature-badge">Patrols</div>
             <h3 class="feature-title">Patrols</h3>
@@ -501,7 +520,7 @@
           </div>
         </a>
 
-        <a href="/report" class="feature-card-link">
+        <a href="/report" class="feature-card-link" data-title="Report">
           <div class="feature-card">
             <div class="feature-badge">Report</div>
             <h3 class="feature-title">Report</h3>
@@ -509,7 +528,7 @@
           </div>
         </a>
 
-        <a href="/accountinfo" class="feature-card-link">
+        <a href="/accountinfo" class="feature-card-link" data-title="Account Info">
           <div class="feature-card">
             <div class="feature-badge">Account</div>
             <h3 class="feature-title">Account Info</h3>
@@ -705,6 +724,22 @@
       await signOut(auth);
       window.location.href = "/";
     });
+
+    // ✅ Home: filter Troop Resources cards by title
+const resourcesSearch = document.getElementById("resourcesSearch");
+if (resourcesSearch) {
+  const cards = Array.from(document.querySelectorAll(".feature-card-link[data-title]"));
+
+  function filterResources() {
+    const q = (resourcesSearch.value || "").trim().toLowerCase();
+    cards.forEach((a) => {
+      const title = (a.getAttribute("data-title") || "").toLowerCase();
+      a.style.display = !q || title.includes(q) ? "" : "none";
+    });
+  }
+
+  resourcesSearch.addEventListener("input", filterResources);
+}
   </script>
 </body>
 </html>
